Update bool to int for object storage
handling the while loop with bool result in the first object always being 0 or null (all values zero). Handling it with an int does work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ add_executable(
         third_day/third.h
         third_day/data_types.c
         third_day/linked_list.c
+        fourth_day/fourth.h
 )
